samples/_failures_safe/1761318126_643ee5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17f9f89f.c: In function ‘main’:
./samples/SAFE/__tmp_17f9f89f.c:145:5: error: expected identifier or ‘(’ at end of input
  145 |     size_t
      |     ^~~~~~
./samples/SAFE/__tmp_17f9f89f.c:145:5: error: expected declaration or statement at end of input
